--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "0.5.4",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-context-menu": "^2.2.5",
-    "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-dialog": "1.0.5", 
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-hover-card": "^1.1.5",
     "@radix-ui/react-label": "^2.1.1",
@@ -37,17 +38,16 @@
     "@types/node": "20.8.2",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.8",
-    "autoprefixer": "10.4.16",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "cmdk": "^0.2.0",
     "framer-motion": "10.16.4",
-    "input-otp": "^1.4.2",
+    "input-otp": "^1.4.2",           
     "lucide-react": "0.284.0",
-    "next": "^13.4.19",
-    "next-themes": "^0.4.4",
-    "postcss": "8.4.31",
-    "react": "^18.2.0",
+    "negotiator": "0.6.3",          
+    "next": "13.5.4",
+    "next-themes": "^0.4.4",        
+    "react": "^18.2.0",            
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
@@ -55,13 +55,20 @@
     "sonner": "^1.7.2",
     "swiper": "10.3.1",
     "tailwind-merge": "1.14.0",
-    "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
+
+    "@tailwindcss/line-clamp": "^0.4.4", 
+    "@types/negotiator": "0.6.3",        
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "1.0.7",
     "eslint": "8.50.0",
-    "eslint-config-next": "13.5.4",
-    "tailwindcss-animate": "1.0.7"
+    "eslint-config-next": "13.5.4"
   }
 }
+
+
