--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-context-menu": "^2.2.5",
-    "@radix-ui/react-dialog": "1.0.5", 
+    "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-hover-card": "^1.1.5",
     "@radix-ui/react-label": "^2.1.1",
@@ -42,12 +42,12 @@
     "clsx": "2.0.0",
     "cmdk": "^0.2.0",
     "framer-motion": "10.16.4",
-    "input-otp": "^1.4.2",           
+    "input-otp": "^1.4.2",
     "lucide-react": "0.284.0",
-    "negotiator": "0.6.3",          
-    "next": "13.5.4",
-    "next-themes": "^0.4.4",        
-    "react": "^18.2.0",            
+    "negotiator": "0.6.3",
+    "next": "^13.5.8",
+    "next-themes": "^0.4.4",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
@@ -59,16 +59,13 @@
     "vaul": "^1.1.2"
   },
   "devDependencies": {
-
-    "@tailwindcss/line-clamp": "^0.4.4", 
-    "@types/negotiator": "0.6.3",        
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/negotiator": "0.6.3",
     "autoprefixer": "^10.4.20",
+    "eslint": "8.50.0",
+    "eslint-config-next": "13.5.4",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-animate": "1.0.7",
-    "eslint": "8.50.0",
-    "eslint-config-next": "13.5.4"
+    "tailwindcss-animate": "1.0.7"
   }
 }
-
-
